# Game

./: .gitignore  .pre-commit-config.yaml  Armor.h  Basic Player Game Info.txt  CodeTests.bat  Equipment.h  FUNCLG.cpp  FUNCLG_Results.txt  Functions.cpp  Functions.h  FunctionsErrors.txt  GAMES_DIRECTORIES_AND_FILES.txt  LinkedList.h  Makefile  README.md  Roles - 1.h  Roles.h  Run.bat  Scan_Directories.py  TEST_OUTPUT.txt  TEST_REPORT.txt  Test.cpp  TestErrors.txt  TestResults.txt  Video Game  codeQuality.sh  errors.txt  models.py  pyproject.toml  quest_test.py  requirements-dev.txt  requirements.txt  runTest.sh
.github/workflows/: codeql-analysis.yml  codeql.yml
CodeTests/: Template_CodeTest_Log.md  makefile
CodeTests/Abilities/: Abilities_CodeTest_Log.md  CodeTest_Abilities.cpp  makefile  run.bat
CodeTests/Armor/: Armor_CodeTest_Log.md  CodeTest_Armor.cpp  makefile  run.bat
CodeTests/Code Results/: CodeTest_ArmorResults.txt  CodeTest_EquipmentResults.txt  CodeTest_Roles_1_Results.txt  CodeTest_Roles_3ClassesTest.txt  EquipmentResults.txt  RolesResults.txt
CodeTests/CodeTest_[Template]/: CodeTest_[Template].cpp  Template_CodeTest_Log.md  makefile
CodeTests/Equipment/: CodeTest_Equipment.cpp  Equipment_CodeTest_Log.md  makefile  run.bat
CodeTests/Functions/: CodeTest_Functions.cpp  Equipment_Print_Results.txt  Functions_CodeTest_Log.md  Roles_Print_Results.txt  makefile  run.bat
CodeTests/LinkedList/: makefile
CodeTests/Roles/: Roles_CodeTest_Log.md  makefile
CodeTests/Stats/: CodeTest_Stats.cpp  Stats_CodeTest_Log.md  makefile  run.bat
CodeTests/_CodeTest Results/: RolesResults.txt
CodeTests/_Code_Results/: AbilitiesResults.txt  CodeTest_Abilities_1_Results.txt  CodeTest_Abilities_2_Results.txt  CodeTest_ArmorResults.txt  CodeTest_Armor_Results.txt  CodeTest_EquipmentResults.txt  CodeTest_Equipment_Results.txt  CodeTest_Functions_Results.txt  CodeTest_Roles_1_Results.txt  (+6 more)
Data/: EquipmentList.txt  TempEList.txt  TempEquipmentList.txt
Deprecated/: Functions.cpp  Functions.h  Makefile
FUNCLG/: TEST_REPORT.txt  Test_Equipment.json  __init__.py  main.py  runTest.sh  test.py
FUNCLG/core/: armor.py  (+1 more)
Includes/: Abilities.h  Armor.h  Character.h  Combat.h  Equipment.h  LinkedList.h  Roles.h  Stats.h
Logs/: Log 11-December-2018.txt  Log 2-August-2018.txt  Log 21-November-2018.txt  Log 23-December-2018.txt  Log 24-December-2018.txt  Log 26-December-2018.txt  Log 27-December-2018.txt  Log 5-July-2018.txt  Log_2018_December_11.txt  Log_2018_December_21.txt.txt  Log_2018_December_23.txt  Log_2018_December_27.txt  Log_2018_December_28.txt
Tests/: CodeTest_Equipment.cpp  makefile
docs/: Basic Player Game Info.txt  FUNCLG Architecture.md  dev_configs.md  npcs.csv
funclg/: __init__.py  __main__.py
tests/: test_abilities.py  test_armor.py  test_equipment.py  test_roles.py
(+214 files in other folders)
