[tool.poetry]
name = "funclg"
version = "0.5.9"
description = "Fun way to build your own CLI game"
authors = ["Jevin <jevyjev324@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.3"
questionary = "^2.1.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
xenon = "^0.9.3"
pylint = "^3.3.3"
bandit = "^1.8.2"
flake8 = "^7.1.1"
flake8-fixme = "^1.1.1"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
black = "^24.10.0"
mypy = "^1.14.1"
pre-commit = "^4.0.1"
safety = "^3.2.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.xenon]
max-absolute = 'A'
max-modules = 'A'
max-average = 'A'

[tool.pylint.message_control]
disable = """,
    missing-function-docstring,
    line-too-long,
    too-many-arguments,
"""

[tool.coverage.report]
show_missing = true
fail_under = 85
include = ["funclg/*"]
